# GMAG

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  main.yml  pypi.yml
docs/: index.html
docs/gmag/: galaxy.html  index.html  sdss.html
gmag/: __init__.py  galaxy.py  sdss.py  setup.py
notebooks/: Download_Time_Comparison.ipynb  Tutorial_Download_Images.ipynb  Tutorial_Get_Random_Galaxy.ipynb
notebooks/example_data/: darg_mergers_10.fits
