[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmag"
version = "0.1.0"
description = "Get me a galaxy"
readme = "README.md"
authors = [
    { name = "Junyu Chen"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["astronomy", "sdss", "fits", "galaxy", "image processing"]
dependencies = [
    "numpy>=1.18",
    "astropy>=4.0",
    "matplotlib>=3.2",
    "requests>=2.23",
    "tomli; python_version< '3.11'",
]
requires-python = ">=3.7"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["black"]